--- a/MetroEngine/MetroEngine/MainWindow.xaml
+++ b/MetroEngine/MetroEngine/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" KeyDown="Window_KeyDown">
     <Grid>
-        
+        <Image x:Name="outImage" Margin="0"/>
+
     </Grid>
 </Window>
