--- a/MetroEngine/MetroEngine/MainWindow.xaml
+++ b/MetroEngine/MetroEngine/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MetroEngine"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" KeyDown="Window_KeyDown">
+        Title="MainWindow" Height="350" Width="525" KeyDown="Window_KeyDown" Closing="Window_Closing">
     <Grid>
         <Image x:Name="outImage" Margin="0"/>
 
